# lock-free-data-structures

./: .clang-uml  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  cachegrind.out.218019  cachegrind.out.226452  cachegrind.out.239336  cachegrind.out.2473207  cachegrind.out.247463  cachegrind.out.276308  cachegrind.out.893008  cachegrind.out.900526  compile.sh  perf.data  perf.data.old  run.sh  tests.sh
.github/workflows/: ci.yml
demos/january_15/: demo.md  latencies_mpmc_1_exp.csv  latencies_mpmc_fail.csv  matching_mpmc_results.csv  ordering_.csv
diagrams/: benchmarking_class.puml  benchmarking_overview.puml  data_structures.puml  include_diagram.puml  matching_engine.puml  order_simulation.puml
documentation/: README.md  cpp.md  python.md
gtests/: example.cpp  setup_test.cpp
include/: collection_order_generator.hpp  generator_collection.hpp  i_order_generator.hpp  market_state.hpp  order.hpp  order_generator.hpp  random_order_generator.hpp
include/benchmarking/: benchmark.hpp
include/data_structures/queues/: i_queue.hpp  mc_lockfree_queue.hpp  mc_mpmc_queue.hpp  readerwriterqueue.h  regular_queue.hpp  rigtorp_mpmc_queue.hpp
include/data_structures/ring_buffers/: i_ring_buffer.hpp  wilt_mpmc_blocking_ring.hpp  wilt_mpmc_nonblock_ring.hpp
include/error_logging/: error_logging.hpp
include/exchange/: book_order.hpp  matching_engine.hpp  price_book.hpp  price_level.hpp  trades_cycle.hpp
include/hardware_logging/: hardware_logger.hpp  hardware_metrics.hpp  thread_counter.hpp
include/order_simulation/: benchmark_order.hpp  collection_order_generator.hpp  i_order_generator.hpp  market_maker_generator.hpp  market_state.hpp  mean_revert_generator.hpp  momentum_generator.hpp  order.hpp  random_order_generator.hpp
include/scenarios/: test_inputs.hpp  testing_order.hpp  testing_order_multi_consumer.hpp  testing_order_single_consumer.hpp  testing_stress.hpp  testing_stress_multi_producer.hpp  testing_stress_single_producer.hpp  utils.hpp
include/utils/: counter.hpp  files.hpp  structs.hpp  threads.hpp  timing.hpp
markdowns/: ideas.md
results/reports/: report_111972746121521.html  report_11758632910.html  report_125032875711109.html  report_12781522712346.html  report_12794196189210.html  report_13118151156816.html  report_13819143924571.html  report_148172809332207.html  report_15012729631156.html  report_15317916011406.html  report_161882930632650.html  report_1684693328270.html  report_17202643914171.html  report_18514322407408.html  report_188632348215649.html  report_195072831411615.html  report_19752146230649.html  report_20777140099901.html  report_2095708430036.html  report_22873110372532.html  report_23213220986522.html  report_23238334714007.html  report_23540479613096.html  report_23862818925384.html  report_247032233224988.html  report_252452185011814.html  report_255021671122094.html  report_25552342112972.html  report_26336785722719.html  report_27832644112278.html  report_28198535412235.html  report_28331494624045.html  report_2890335161385.html  report_294172243923442.html  report_295641936122751.html  report_296152841226825.html  report_30952795812793.html  report_313077355626.html  report_31475878525777.html  report_31913207166398.html  (+17 more)
src/: main.cpp
src/benchmarking/cpp/: benchmark.cpp
src/benchmarking/python/: benchmarking.sh  matplotlib.py  pixi.toml  setup.md
src/benchmarking/reports/: report_100232503720030.html  report_84391532826538.html  report_84391532826538_02_23_2026_09_46_32.html  report_84391532826538_02_23_2026_09_47_01.html
src/data_structures/queues/: mc_lockfree_queue.cpp  mc_mpmc_queue.cpp  regular_queue.cpp  rigtorp_mpmc_queue.cpp
src/error_logging/: error_logging.cpp
src/exchange/: matching_engine.cpp  price_book.cpp  price_level.cpp
src/hardware_logging/: hardware_logger.cpp  hardware_metrics.cpp  thread_counter.cpp
src/order_simulation/: benchmark_order.cpp  collection_order_generator.cpp  market_maker_generator.cpp  market_state.cpp  mean_revert_generator.cpp  momentum_generator.cpp  order.cpp  order_simulation.cpp  random_order_generator.cpp
src/scenarios/: test_inputs.cpp  testing_order_multi_consumer.cpp  testing_order_single_consumer.cpp  testing_stress_multi_producer.cpp  testing_stress_single_producer.cpp
src/utils/: files.cpp  threads.cpp  timing.cpp
(+19 files in other folders)
